// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WhatsappMsgLocalizationForm > should save translated quick replies 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [
              "quick reply 1 spanish",
            ],
          },
          "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should save translated quick replies 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [
              "quick reply 1 spanish",
            ],
          },
          "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [
              "quick reply 1 spanish",
              "quick reply 2 spanish",
            ],
          },
          "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should save updated message translation 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should save updated message translation 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "attachment": "image:https://example.com/image.png",
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should save updated message translation 3`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "attachment": "image:https://example.com/image.png",
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "attachment": "audio:https://example.com/audio_new.mp3",
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should save updated message translation 4`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "attachment": "image:https://example.com/image.png",
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "attachment": "audio:https://example.com/audio_new.mp3",
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "list_items": [],
            "quick_replies": [],
            "text": "new message",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should start with the correct values 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "spa",
      [
        {
          "translations": {
            "action_url": "url de acción",
            "attachment": "image:https://example.com/imagen.png",
            "button_text": "texto del botón",
            "footer": "pie de página",
            "header_text": "texto de encabezado",
            "list_items": [
              {
                "description": "descripción 1",
                "title": "título 1",
              },
              {
                "description": "descripción 2",
                "title": "título 2",
              },
            ],
            "quick_replies": [],
            "text": "texto",
          },
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should update an interactive message with list items 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "action_url": "nuevo action url",
            "button_text": "nuevo button text",
            "footer": "nuevo footer",
            "header_text": "nuevo header",
            "list_items": [
              {
                "description": "descripción 1",
                "title": "título 1",
                "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
              },
            ],
            "quick_replies": [],
            "text": "nuevo texto",
          },
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should update an interactive message with list items 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "action_url": "nuevo action url",
            "button_text": "nuevo button text",
            "footer": "nuevo footer",
            "header_text": "nuevo header",
            "list_items": [
              {
                "description": "descripción 1",
                "title": "título 1",
                "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
              },
            ],
            "quick_replies": [],
            "text": "nuevo texto",
          },
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "action_url": "nuevo action url",
            "button_text": "nuevo button text",
            "footer": "nuevo footer",
            "header_text": "nuevo header",
            "list_items": [
              {
                "description": "descripción 1",
                "title": "título 1",
                "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
              },
              {
                "description": "descripción 2",
                "title": "título 2",
                "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
              },
            ],
            "quick_replies": [],
            "text": "nuevo texto",
          },
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`WhatsappMsgLocalizationForm > should update an interactive message with list items 3`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "action_url": "nuevo action url",
            "button_text": "nuevo button text",
            "footer": "nuevo footer",
            "header_text": "nuevo header",
            "list_items": [
              {
                "description": "descripción 1",
                "title": "título 1",
                "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
              },
            ],
            "quick_replies": [],
            "text": "nuevo texto",
          },
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "action_url": "nuevo action url",
            "button_text": "nuevo button text",
            "footer": "nuevo footer",
            "header_text": "nuevo header",
            "list_items": [
              {
                "description": "descripción 1",
                "title": "título 1",
                "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
              },
              {
                "description": "descripción 2",
                "title": "título 2",
                "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
              },
            ],
            "quick_replies": [],
            "text": "nuevo texto",
          },
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
      ],
    ],
    [
      "eng",
      [
        {
          "translations": {
            "action_url": "nuevo action url",
            "button_text": "nuevo button text",
            "footer": "nuevo footer",
            "header_text": "nuevo header",
            "list_items": [
              {
                "description": "descripción 2",
                "title": "título 2",
                "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
              },
            ],
            "quick_replies": [],
            "text": "nuevo texto",
          },
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
